--- a/platformio.ini
+++ b/platformio.ini
@@ -1,29 +1,9 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
+[env:decocer_rp2040]
+extends = rp2040_base
+board = rpipico
 
-[platformio]
-default_envs = 
-	mega2560
-	uno
-	mega328
-	unowifiR2
-	nano
-	samd21-dev-usb
-	samd21-zero-usb
-	ESP32
-	Nucleo-F411RE
-	Nucleo-F446RE
-	Teensy3_2
-	Teensy3_5
-	Teensy3_6
-	Teensy4_0
-	Teensy4_1
-src_dir = .
-include_dir = .
+# add our variants files to the include and src paths
+build_flags = ${rp2040_base.build_flags} 
+  -L "${platformio.libdeps_dir}/${this.__env__}/BSEC2 Software Library/src/cortex-m0plus"
+lib_deps =
+  ${rp2040_base.lib_deps}
