--- a/platformio.ini
+++ b/platformio.ini
@@ -1,9 +1,4 @@
-[env:decocer_rp2040]
-extends = rp2040_base
-board = rpipico
-
-# add our variants files to the include and src paths
-build_flags = ${rp2040_base.build_flags} 
-  -L "${platformio.libdeps_dir}/${this.__env__}/BSEC2 Software Library/src/cortex-m0plus"
-lib_deps =
-  ${rp2040_base.lib_deps}
+[env:pico]
+platform = raspberrypi
+board = pico
+framework = arduino
