--- a/platformio.ini
+++ b/platformio.ini
@@ -1,7 +1,9 @@
+[platformio]
+src_dir = .
+include_dir = .
+
 [env:pico]
 platform = raspberrypi
 board = pico
 framework = arduino
 
-src_dir = .
-include_dir = .
